<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cart_dialog_check">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:src="@color/cart_dialog_33A6B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cart_dialog_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/no_ad"
        android:textColor="@color/cart_dialog_33A6B8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cart_dialog_bt_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cart_dialog_bt_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cart_dialog_check"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cart_dialog_bt_no"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cart_dialog_bt_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cart_dialog_check"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart_dialog_bt_yes" />

</androidx.constraintlayout.widget.ConstraintLayout>