<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dg_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationY="200dp">

    <LinearLayout
        android:id="@+id/dg_ll_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:round="40dp"
            app:srcCompat="@mipmap/head1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:text="@string/rank"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dg_ll_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dg_ll_rank"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:round="60dp"
            app:srcCompat="@mipmap/logo_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="20dp"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dg_ll_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dg_ll_three"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:round="60dp"
            app:srcCompat="@mipmap/logo_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="20dp"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dg_ll_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dg_ll_four"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:round="60dp"
            app:srcCompat="@mipmap/logo_5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="20dp"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dg_ll_six"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dg_ll_five"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:round="60dp"
            app:srcCompat="@mipmap/logo_6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="20dp"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dg_ll_eight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dg_ll_six"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:round="60dp"
            app:srcCompat="@mipmap/logo_8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="20dp"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>