<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_FCF8EF"
    android:padding="13dp"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/game_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/title"
        android:textSize="60sp"
        android:textColor="@color/title_tx_787469"
        app:layout_constraintBottom_toTopOf="@id/game_iv_share"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_tv_score"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/ib_inform_cards"
        android:gravity="center|bottom"
        android:maxLines="1"
        android:minWidth="50dp"
        android:padding="3dp"
        android:text="@string/zero"
        android:textColor="@color/bg_FCF8EF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/game_tv_title"
        app:layout_constraintEnd_toStartOf="@id/game_tv_high_score"
        app:layout_constraintTop_toTopOf="@+id/game_tv_title" />

    <TextView
        android:id="@+id/game_tv_high_score"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/ib_inform_cards"
        android:gravity="center|bottom"
        android:minWidth="80dp"
        android:text="@string/zero"
        android:textColor="@color/bg_FCF8EF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/game_tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_tv_title" />

    <ImageView
        android:id="@+id/game_iv_share"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/ib_inform_cards"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toTopOf="@id/game_gl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_tv_title" />

    <ImageView
        android:id="@+id/game_iv_undo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ib_inform_cards"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_replay_24"
        app:layout_constraintBottom_toBottomOf="@id/game_iv_share"
        app:layout_constraintEnd_toStartOf="@id/game_iv_restart" />

    <ImageView
        android:id="@+id/game_iv_restart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ib_inform_cards"
        android:src="@drawable/ic_baseline_cached_24"
        app:layout_constraintBottom_toBottomOf="@id/game_iv_share"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/game_tv_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/cards_inform_D4C6BD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/game_tv_score"
        app:layout_constraintStart_toStartOf="@id/game_tv_score"
        app:layout_constraintTop_toTopOf="@id/game_tv_score" />

    <TextView
        android:id="@+id/game_tv_high_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score"
        android:textColor="@color/cards_inform_D4C6BD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/game_tv_high_score"
        app:layout_constraintStart_toStartOf="@id/game_tv_high_score"
        app:layout_constraintTop_toTopOf="@id/game_tv_high_score" />

    <GridLayout
        android:id="@+id/game_gl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/game_zone"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_iv_share" />

    <GridLayout
        android:id="@+id/game_gl_animation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/game_zone"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_iv_share" />

    <TextView
        android:id="@+id/game_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:background="@color/bg_FCF8EF"
        android:gravity="center"
        android:text="遊戲結束!"
        android:textColor="@color/title_tx_787469"
        android:textSize="50sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/game_gl"
        app:layout_constraintLeft_toLeftOf="@id/game_gl"
        app:layout_constraintRight_toRightOf="@id/game_gl"
        app:layout_constraintTop_toTopOf="@id/game_gl" />


</androidx.constraintlayout.widget.ConstraintLayout>